# my-compiler

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: bytecode-text-format.md  language-grammar.ebnf  roadmap-archive-2026-07-04.md  roadmap.md  source-metadata.md
docs/decisions/: m05a-semantic-decisions.json  m05a-semantic-decisions.md  m05b-cdbc-contract.json  m05b-cdbc-contract.md
docs/superpowers/plans/: 2026-06-19-golden-tests.md  2026-06-19-register-ir.md  2026-06-27-assignment-expression.md  2026-06-27-if-block-typed-let.md  2026-07-01-agent-memory-file.md  2026-07-01-basic-type-checker.md  2026-07-01-compile-time-scope-resolution.md  2026-07-01-lexical-scope.md  2026-07-02-closures.md  2026-07-02-diagnostic-cleanup.md  2026-07-02-function-declarations-and-calls.md  2026-07-02-logical-operators.md  2026-07-02-while-loops.md  2026-07-03-arrays-and-indexing.md  2026-07-03-bytecode-vm.md  2026-07-04-array-index-assignment.md  2026-07-04-bytecode-artifact-emitter-and-dump.md  2026-07-04-function-return-type-inference.md  2026-07-04-function-value-arity-inference.md  2026-07-04-lambda-function-expressions.md  2026-07-04-language-roadmap-refresh.md  2026-07-04-len-builtin.md  2026-07-04-rust-vm-executor-parity.md  2026-07-04-rust-vm-split.md  2026-07-04-simple-let-type-inference.md  2026-07-05-function-signatures.md  2026-07-05-function-type-annotations.md  2026-07-05-loop-control.md  2026-07-05-named-struct-types.md  2026-07-05-native-stdlib-array-push-pop.md  2026-07-05-native-stdlib-math.md  2026-07-05-remove-cpp-bytecode-vm.md  2026-07-05-struct-field-assignment.md  2026-07-05-struct-literals-field-access.md  2026-07-06-array-element-types.md  2026-07-06-cli-multi-source.md  2026-07-06-diagnostic-source-snippets.md  2026-07-06-fun-expression-statement.md  2026-07-06-import-source-loading.md  2026-07-07-file-aware-diagnostics.md  (+67 more)
docs/superpowers/specs/: 2026-06-19-golden-tests-design.md  2026-06-19-register-ir-design.md  2026-06-27-assignment-expression-design.md  2026-06-27-if-block-typed-let-design.md  2026-07-01-agent-memory-design.md  2026-07-01-basic-type-checker-design.md  2026-07-01-compile-time-scope-resolution-design.md  2026-07-01-lexical-scope-design.md  2026-07-02-closures-design.md  2026-07-02-diagnostic-cleanup-design.md  2026-07-02-function-declarations-and-calls-design.md  2026-07-02-logical-operators-design.md  2026-07-02-while-loops-design.md  2026-07-03-arrays-and-indexing-design.md  2026-07-03-bytecode-vm-design.md  2026-07-04-array-index-assignment-design.md  2026-07-04-bytecode-artifact-emitter-and-dump-design.md  2026-07-04-function-return-type-inference-design.md  2026-07-04-function-value-arity-inference-design.md  2026-07-04-lambda-function-expressions-design.md  2026-07-04-language-roadmap-refresh-design.md  2026-07-04-len-builtin-design.md  2026-07-04-rust-vm-executor-parity-design.md  2026-07-04-rust-vm-split-design.md  2026-07-04-simple-let-type-inference-design.md  2026-07-05-function-signatures-design.md  2026-07-05-function-type-annotations-design.md  2026-07-05-loop-control-design.md  2026-07-05-named-struct-types-design.md  2026-07-05-native-stdlib-array-push-pop-design.md  2026-07-05-native-stdlib-math-design.md  2026-07-05-remove-cpp-bytecode-vm-design.md  2026-07-05-struct-field-assignment-design.md  2026-07-05-struct-literals-field-access-design.md  2026-07-06-array-element-types-design.md  2026-07-06-cli-multi-source-design.md  2026-07-06-diagnostic-source-snippets-design.md  2026-07-06-fun-expression-statement-design.md  2026-07-06-import-source-loading-design.md  2026-07-07-file-aware-diagnostics-design.md  (+67 more)
docs/verification/: m05a-baseline.json  m05b-artifact-audit-report.json  m05b-baseline.json  m0a-baseline.json  m0a-inventory-design.md  m0b-baseline.json  m0b-boundary-design.md  m0c-baseline.json  m0c-malformed-design.md  m0d-baseline.json  m0d-verification-matrix-design.md
examples/: hello.cd
include/: Ast.hpp  Bytecode.hpp  BytecodeCompiler.hpp  BytecodeTextEmitter.hpp  BytecodeVM.hpp  DeclarationIndex.hpp  Diagnostic.hpp  FlowFacts.hpp  FrontendSession.hpp  IR.hpp  IRCompiler.hpp  IRInterpreter.hpp  Lexer.hpp  LosslessSource.hpp  ModuleInterface.hpp  ModuleInterfaceEmitter.hpp  ModuleProgram.hpp  ModuleSymbols.hpp  NativeStdlib.hpp  Parser.hpp  SourceIdentity.hpp  SourceManager.hpp  SourceMap.hpp  Token.hpp  TypeChecker.hpp  TypeCheckerTypes.hpp  TypeUtils.hpp  Value.hpp
src/: Ast.cpp  Bytecode.cpp  BytecodeCompiler.cpp  BytecodeTextEmitter.cpp  BytecodeVM.cpp  DeclarationIndex.cpp  Diagnostic.cpp  FlowFacts.cpp  FrontendSession.cpp  IR.cpp  IRCompiler.cpp  IRInterpreter.cpp  Lexer.cpp  LosslessSource.cpp  ModuleInterfaceEmitter.cpp  ModuleProgram.cpp  ModuleSymbols.cpp  NativeStdlib.cpp  Parser.cpp  SourceManager.cpp  SourceMap.cpp  TypeChecker.cpp  TypeUtils.cpp  Value.cpp  main.cpp
tests/: boundary_allowlist.json  boundary_cases.json  boundary_comparison.py  boundary_comparison_selftest.py  bytecode_artifact_tests.py  cdbc_contract_audit.py  cdbc_contract_audit_selftest.py  ci_workflow_tests.py  cli_multi_source_tests.py  cmake_config_tests.py  flow_facts_tests.cpp  frontend_session_tests.cpp  ir_source_location_tests.cpp  malformed_cases.json  malformed_corpus.py  malformed_tests_selftest.py  module_interface_emitter_tests.cpp  module_symbols_tests.cpp  run_boundary_tests.py  run_golden_tests.py  run_golden_tests_selftest.py  run_malformed_tests.py  run_rust_vm_tests.py  run_verification.py  run_verification_matrix.py  run_verification_selftest.py  semantic_decision_inventory.py  semantic_decisions.py  semantic_decisions_selftest.py  smoke_register_ir.sh  source_map_tests.cpp  type_utils_tests.cpp  verification_inventory.json  verification_inventory.py  verification_matrix.json  verification_matrix.py  verification_matrix_selftest.py
tests/boundary_references/tokens/: adt_module_import.out  array_find_index.out  generic_struct_methods.out  match_expression.out  (+1 more)
vm-rs/: Cargo.toml  README.md
vm-rs/src/: bytecode.rs  format.rs  main.rs  runtime.rs  value.rs  vm.rs
(+1754 files in other folders)
